WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293297
Fix visionOS build error after
295157@main
https://bugs.webkit.org/show_bug.cgi?id=293297
Summary
Fix visionOS build error after 295157@main
Ada Chan
Reported
2025-05-20 08:59:39 PDT
Fix visionOS build error in ModelProcessModelPlayer.cpp
Attachments
Add attachment
proposed patch, testcase, etc.
Ada Chan
Comment 1
2025-05-20 08:59:40 PDT
<
rdar://problem/151701260
>
Ada Chan
Comment 2
2025-05-20 09:02:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45650
EWS
Comment 3
2025-05-20 09:06:13 PDT
Committed
295164@main
(a7cd5a7d8497): <
https://commits.webkit.org/295164@main
> Reviewed commits have been landed. Closing PR #45650 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug