Fix visionOS build error after 295157@main https://bugs.webkit.org/show_bug.cgi?id=293297 rdar://151701260

Unreviewed build fix

Fix the casing of the include file name

* Source/WebKit/WebProcess/Model/ModelProcessModelPlayer.cpp:

Canonical link: https://commits.webkit.org/295164@main